--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,16 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  firebase_core: ^2.7.1
+  firebase_auth: ^4.2.2
+  cloud_firestore: ^4.4.4
+  firebase_core_web: ^2.2.2
+  firebase_auth_web: ^5.2.10
+  intl: ^0.17.0
+  fluttertoast:
+  file_picker:
+  path_provider:
+  image_picker:
 
 dev_dependencies:
   flutter_test:
